corrigido texto da imagem dos processadores e incrementado texto a proposta

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -50,7 +50,7 @@
 	title={Proposta de Balanceamento de Carga para Redução de Migração de Processos em Ambientes Multiprogramados},
 	author={Guilherme Arruda and Edson Luiz Padoin and Laércio Lima Pilla and Philippe Olivier Alexandre Navaux and Jean-Francois Mehaut},
 	booktitle={XVI Simpósio de Sistemas Computacionais (WSCAD-WIC)},
-	address={Florianópolis, RJ},
+	address={Florianópolis, SC},
 	pages={1-8},
 	year={2015}
 }
@@ -94,14 +94,6 @@
 	organization={IEEE}
 }
 
-@inproceedings{zheng2010hierarchical,
-	title={Hierarchical load balancing for Charm++ applications on large supercomputers},
-	author={Zheng, Gengbin and Meneses, Esteban and Bhatele, Abhinav and Kale, Laxmikant V},
-	booktitle={Parallel Processing Workshops (ICPPW), 2010 39th International Conference on},
-	pages={436--444},
-	year={2010},
-	organization={IEEE}
-}
 
 @inproceedings{jyothi2004debugging,
 	title={Debugging support for Charm++},
@@ -280,6 +272,14 @@
 	howpublished = {\url{http://charmplusplus.org/tutorial/CharmComponents.html}},
 	note = {Acessado em: 23/11/2017},
 	year = {2017}
+}
+
+@article{torres2016,
+	title={Um prot{\'o}tipo de algoritmo de balanceamento de carga guiado pelos pr{\'o}prios n{\'u}cleos},
+	author={de Freitas, Vinicius Marino Calvo Torres and Pilla, La{\'e}rcio Lima},
+	journal={ERAD-RS},
+	year={2016}
+	
 }
 
 
