--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
 \newcommand{\charm}{\textsc{Charm++}\xspace}
 \newcommand{\newlb}{\textsc{SmartLB }\xspace}
 \newcommand{\hybridlb}{\textsc{HybridLB}\xspace}
+\newcommand{\averagelb}{\textsc{AverageLB}\xspace}
 \newcommand{\greedylb}{\textsc{GreedyLB}\xspace}
 \newcommand{\refinelb}{\textsc{RefineLB}\xspace}
 \newcommand{\rand}{\textsc{RandCentLB}\xspace}
