--- a/sections/metodologia/hardware.tex
+++ b/sections/metodologia/hardware.tex
@@ -1,1 +1,3 @@
 \section{Hardware Utilizado}
+Para validação da proposta, foi utilizado um equipamento com um processador Intel modelo i7-
+6500U. Este processador possui 4 núcleos com 2 Simultaneous multithreading(SMT)/núcleo, totalizando 8 núcleos. Para os testes, utilizou-se o sistema operacional Linux Ubuntu 16.04 com kernel versão 4.4.33. A versão do \charm~ utilizada foi a 6.5.1 e do compilador g++ a versão 5.4.1.
