--- a/sections/resumo.tex
+++ b/sections/resumo.tex
@@ -8,23 +8,6 @@ O algoritmo do balanceador coleta informações do sistema e da aplicação em t
 Para implementação foi utilizado o modelo de programação paralela \charm. 
 % res
 Os resultados preliminares apresentaram reduções de $3$ à $137$ vezes na quantidade de migrações de tarefas e reduções de $3,5$\% à $19,8$\% no tempo total de execução.	
-\begin{comment}
-Este trabalho trata de um tema bastante discutido atualmente, a computação paralela e heterogênea. Visa realizar a comparação de desempenho e eficiência energética de componentes que se enquadram nesta categoria. Para isso, serão comparados um coprocessador Intel Xeon Phi e uma GPGPU NVIDIA. Antes de compará-los, foi necessário um estudo das arquiteturas das GPUs da NVIDIA e do coprocessador Intel Xeon Phi (Intel MIC), bem como de algumas APIs e plataformas que possibilitam a implementação nestes componentes. A comparação foi realizada utilizando um \textit{benchmark}, que igualmente foi estudado. Como resultado, percebeu-se o quão eficientes ambos os componentes podem ser, no caso do Xeon Phi, que no \textit{benchmark} \textit{MaxFlops}, alcançou 5,06 TFlops para valores de precisão simples com uma eficiência energética de 17,27 GFlops/W e, na GPGPU NVIDIA, que no \textit{benchmark} GEMM, atingiu 3,03 TFlops para valores de precisão simples e uma eficiência energética de 13,18 GFlops/W. 
 
-
-- O resumo deve responder 4 perguntas:
-
-	a) qual o tema do trabalho; 
-
-	b) qual o objetivo; 
-
-	c) qual a metodologia empregada; e 
-
-	d) qual o resultado/conclusão do trabalho.
-
-
-
-
-\textbf{Palavras-chave}: Computação Paralela, Computação Heterogênea, Computação de Alto Desempenho, CUDA, OpenCL, OpenMP, SHOC \textit{Benchmark Suite}.
-\end{comment}
+AINDA NÃO ESTÁ PRONTO, SÓ COPIEI DE UM ARTIGO MEU.
 \end{resumo}
